{
  "version": 4,
  "terraform_version": "0.12.7",
  "serial": 22,
  "lineage": "09ecd089-c4bb-1032-36bc-af0bcf196ee2",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "phpapp1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0d8f6eb4f641ef691",
            "arn": "arn:aws:ec2:us-east-2:473358639865:instance/i-0aeda259257d5c214",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-0aeda259257d5c214",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "awscert",
            "monitoring": false,
            "primary_network_interface_id": "eni-0ece6bcbf36d345b6",
            "private_dns": "ip-192-168-1-211.us-east-2.compute.internal",
            "private_ip": "192.168.1.211",
            "public_ip": "13.59.81.24",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0a32336240289aa1c",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0586f8e1d73afb1e9",
            "tags": {
              "Name": "WebApp1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0d9f4dfe85b6f4870"
            ]
          },
          "depends_on": [
            "aws_security_group.WebServer",
            "aws_subnet.PublicAZA"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "phpapp2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0d8f6eb4f641ef691",
            "arn": "arn:aws:ec2:us-east-2:473358639865:instance/i-077733b97c26c63ad",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-077733b97c26c63ad",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "awscert",
            "monitoring": false,
            "primary_network_interface_id": "eni-0705386b84d719947",
            "private_dns": "ip-192-168-3-245.us-east-2.compute.internal",
            "private_ip": "192.168.3.245",
            "public_ip": "18.191.254.99",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0c5673f67b053a47a",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-092078d76f931caa1",
            "tags": {
              "Name": "WebApp2"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0d9f4dfe85b6f4870"
            ]
          },
          "depends_on": [
            "aws_security_group.WebServer",
            "aws_subnet.PublicAZB"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-06b8e4ddf6ad5a771",
            "owner_id": "473358639865",
            "tags": {
              "Name": "IGW-MainVPC-Ohio"
            },
            "vpc_id": "vpc-00253be39d94fd3b4"
          },
          "depends_on": [
            "aws_vpc.mainvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-063481526cce60f26",
            "owner_id": "473358639865",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "Private"
            },
            "vpc_id": "vpc-00253be39d94fd3b4"
          },
          "depends_on": [
            "aws_vpc.mainvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-08a31e8357a42362e",
            "owner_id": "473358639865",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-06b8e4ddf6ad5a771",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Public"
            },
            "vpc_id": "vpc-00253be39d94fd3b4"
          },
          "depends_on": [
            "aws_internet_gateway.gw",
            "aws_vpc.mainvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "PrivateAZA",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0330c55a131bbe159",
            "route_table_id": "rtb-063481526cce60f26",
            "subnet_id": "subnet-0ef7d0ac491df8c14"
          },
          "depends_on": [
            "aws_route_table.private",
            "aws_subnet.PrivateAZA"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "PrivateAZB",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0148b14fb91863890",
            "route_table_id": "rtb-063481526cce60f26",
            "subnet_id": "subnet-0af80b8db50099bc3"
          },
          "depends_on": [
            "aws_route_table.private",
            "aws_subnet.PrivateAZB"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "PrivateAZC",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f4caecb3bc39541f",
            "route_table_id": "rtb-063481526cce60f26",
            "subnet_id": "subnet-08b6df2c825a5d814"
          },
          "depends_on": [
            "aws_route_table.private",
            "aws_subnet.PrivateAZC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "PublicAZA",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a20940f6f1682c71",
            "route_table_id": "rtb-08a31e8357a42362e",
            "subnet_id": "subnet-0586f8e1d73afb1e9"
          },
          "depends_on": [
            "aws_route_table.public",
            "aws_subnet.PublicAZA"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "PublicAZB",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0afd1d48e6de4fdfa",
            "route_table_id": "rtb-08a31e8357a42362e",
            "subnet_id": "subnet-092078d76f931caa1"
          },
          "depends_on": [
            "aws_route_table.public",
            "aws_subnet.PublicAZB"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "PublicAZC",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bf5d9057e663a24a",
            "route_table_id": "rtb-08a31e8357a42362e",
            "subnet_id": "subnet-0e2532bfdb44c8465"
          },
          "depends_on": [
            "aws_route_table.public",
            "aws_subnet.PublicAZC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "WebServer",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:473358639865:security-group/sg-0d9f4dfe85b6f4870",
            "description": "ONLY HTTP CONNECTION INBOUD",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d9f4dfe85b6f4870",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "WebServer",
            "name_prefix": null,
            "owner_id": "473358639865",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "WebServer-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-00253be39d94fd3b4"
          },
          "depends_on": [
            "aws_vpc.mainvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "PrivateAZA",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:473358639865:subnet/subnet-0ef7d0ac491df8c14",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "192.168.2.0/24",
            "id": "subnet-0ef7d0ac491df8c14",
            "map_public_ip_on_launch": false,
            "owner_id": "473358639865",
            "tags": {
              "Name": "2a-PrivateSubnet"
            },
            "vpc_id": "vpc-00253be39d94fd3b4"
          },
          "depends_on": [
            "aws_vpc.mainvpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "PrivateAZB",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:473358639865:subnet/subnet-0af80b8db50099bc3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "192.168.4.0/24",
            "id": "subnet-0af80b8db50099bc3",
            "map_public_ip_on_launch": false,
            "owner_id": "473358639865",
            "tags": {
              "Name": "2b-PrivateSubnet"
            },
            "vpc_id": "vpc-00253be39d94fd3b4"
          },
          "depends_on": [
            "aws_vpc.mainvpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "PrivateAZC",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:473358639865:subnet/subnet-08b6df2c825a5d814",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "192.168.6.0/24",
            "id": "subnet-08b6df2c825a5d814",
            "map_public_ip_on_launch": false,
            "owner_id": "473358639865",
            "tags": {
              "Name": "2c-PrivateSubnet"
            },
            "vpc_id": "vpc-00253be39d94fd3b4"
          },
          "depends_on": [
            "aws_vpc.mainvpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "PublicAZA",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:473358639865:subnet/subnet-0586f8e1d73afb1e9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "192.168.1.0/24",
            "id": "subnet-0586f8e1d73afb1e9",
            "map_public_ip_on_launch": false,
            "owner_id": "473358639865",
            "tags": {
              "Name": "2a-PublicSubnet"
            },
            "vpc_id": "vpc-00253be39d94fd3b4"
          },
          "depends_on": [
            "aws_vpc.mainvpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "PublicAZB",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:473358639865:subnet/subnet-092078d76f931caa1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "192.168.3.0/24",
            "id": "subnet-092078d76f931caa1",
            "map_public_ip_on_launch": false,
            "owner_id": "473358639865",
            "tags": {
              "Name": "2b-PublicSubnet"
            },
            "vpc_id": "vpc-00253be39d94fd3b4"
          },
          "depends_on": [
            "aws_vpc.mainvpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "PublicAZC",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:473358639865:subnet/subnet-0e2532bfdb44c8465",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "192.168.5.0/24",
            "id": "subnet-0e2532bfdb44c8465",
            "map_public_ip_on_launch": false,
            "owner_id": "473358639865",
            "tags": {
              "Name": "2c-PublicSubnet"
            },
            "vpc_id": "vpc-00253be39d94fd3b4"
          },
          "depends_on": [
            "aws_vpc.mainvpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "mainvpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:473358639865:vpc/vpc-00253be39d94fd3b4",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-00317d3ee7167fe46",
            "default_route_table_id": "rtb-0f944dc1395c2fa21",
            "default_security_group_id": "sg-0655b52a62615612d",
            "dhcp_options_id": "dopt-4225342a",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-00253be39d94fd3b4",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0f944dc1395c2fa21",
            "owner_id": "473358639865",
            "tags": {
              "Name": "MainVPC-Ohio"
            }
          }
        }
      ]
    }
  ]
}